# sibsau-timetable-loader

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: audithorium.py  broker.py  comparer.py  config.py  database.py  logger.py  main.py  parser.py  parser_types.py  profiler.py  runner.py  validator.py
app/mock/: Расписание Алиева Д. П..html  Расписание БПИ23-01.html  Расписание Ситников М. Н..html
