[project]
name = "sibsau-timetable-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "beanie>=1.29.0",
    "beautifulsoup4>=4.13.3",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "psutil>=7.0.0",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tabulate>=0.9.0",
    "var-dump>=1.2",
]
